# s4_hackathon

clinical-warroom/: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_rag.py
clinical-warroom/.streamlit/: config.toml
clinical-warroom/agents/: __init__.py  base_agent.py  llm_client.py  schemas.py
clinical-warroom/agents/specialists/: __init__.py  data_quality_agent.py  diagnostic_agent.py  ethics_agent.py  (+2 more)
clinical-warroom/api/: __init__.py  app.py
clinical-warroom/audit_logs/: audit_2026-02-07.jsonl
clinical-warroom/core/: __init__.py  case_processor.py  chat_engine.py  config.py  exceptions.py  logging.py
clinical-warroom/debate/: __init__.py  critique.py  orchestrator.py  revision.py  schemas.py  scoring.py  voting.py
clinical-warroom/hitl/: __init__.py  audit.py  coordinator.py  models.py  routes.py  store.py
clinical-warroom/models/: __init__.py  agent_output.py  case.py  decision.py
clinical-warroom/rag/: __init__.py  chroma_store.py  ingestion.py  patient_store.py  retriever.py  store.py
clinical-warroom/rl/: __init__.py  coordinator.py  environment.py  policy.py  state.py  trainer.py  training_data.py
clinical-warroom/safety/: __init__.py  evaluator.py  rules.py
clinical-warroom/sample_patients/: patient_1_diabetic_neuropathy.txt  patient_2_elderly_high_risk.txt  patient_3_parkinsons.txt  patient_4_post_covid.txt  patient_5_preop_knee.txt
clinical-warroom/scripts/: verify_mcp_tools.py  verify_rag.py
clinical-warroom/tools/: __init__.py  mcp_tools.py
clinical-warroom/ui/: __init__.py  app.py
(+32 files in other folders)
