[project]
name = "clinical-warroom"
version = "0.1.0"
description = "Multi-agent clinical decision support system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    
    # LLM (Phase 1+)
    "groq>=0.4.0",
    
    # RAG (Phase 2+)
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    
    # ML/RL (Phase 6+)
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
